# radianos

./: .gdbinit  .gitignore  BUILDING.md  COMPILANCE.md  Cargo.toml  DRAFT.md  DRIVER_COMPILANCE.md  LICENSE  Makefile  RADIAN_CORE.md  README.md  STRUCT.md  radian.yml  syscalls_doc.txt
.github/workflows/: rust.yml
boot/: Cargo.toml  Makefile  boot.asm  loader.c  loader.ld
boot/esp/efi/boot/: bootx64.efi
boot/src/: allocator.rs  bootloader.asm  elf_loading.rs  floppy.img  fs.rs  kernel.rs  lib.rs  log.rs  main.rs  serial.rs
docs/handbook/: book.toml
docs/handbook/src/: SUMMARY.md  ch01-introduction.md
docs/src/: ch01-introduction.md
esp/efi/boot/: bootx64.efi  kernel.elf
system/: Cargo.toml
system/core/: Cargo.toml  GNUmakefile  README.md  radian.yml
system/core/cortex-m/: Cargo.toml
system/core/kernel/: Cargo.toml  GNUmakefile
system/core/kernel/bin-x86_64/: kernel
system/core/kernel/bin-x86_64/limine/: kernel
system/core/kernel/obj-x86_64/: main.c.d  pmm.c.d
system/core/kernel/obj-x86_64/drivers/vga/: flanterm.c.d
system/core/kernel/obj-x86_64/drivers/vga/backends/: fb.c.d
system/core/kernel/src/: main.c  main.rs  memory.x  pmm.c  pmm.h
system/core/limine/: limine
system/core/radian_core/: Cargo.toml
system/core/radian_core/src/: cap.rs  main.rs  task.rs
system/core/radian_core/src/core/: mod.rs  policy.rs  scheduler.rs  task.rs
system/core/src/: TbsAlloc.rs  asm.rs  asm_lib.rs  cap.rs  caps.rs  containers.rs  cpu.rs  db.rs  gdt.rs  lib.rs  linker.ld  log.rs  logo.txt  main.rs  pmm.rs  policy.rs  prelude.rs  smp.rs  styles.rs  task.rs  vfs.rs  vmm.rs
system/core/src/core/: ipc.rs  memory.rs  runtime.rs  scheduler.rs  task.rs
system/drivers/: Cargo.toml
system/drivers/src/: ata.rs  driver.ld  kernel.ld  kernel.rs  test.c
system/rlibc/: Cargo.toml
system/rlibc/src/: lib.rs
