cargo-features = ["edition2024"]

[package]
name = "boot"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
ansi_rgb = "0.2.0"
log = "0.4.27"
panic-abort = "0.3.2"
uefi = { version = "0.35.0", features = ["alloc", "global_allocator", "logger", "panic_handler"] }
xmas-elf = "0.10.0"
