[package]
name = "radian_core"
version = "0.1.4"
edition = "2024"

[[bin]]
name = "kernel"
path = "bin/kernel.rs"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
xmas-elf = "0.10.0"
iced-x86 = { version = "1.21.0", default-features = false, features = ["no_std", "gas", "decoder", "encoder"] }
