[package]
name = "radian_libc"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ata"
path = "bin/ata.rs"

[lib]
name = "radian_libc"
crate-type = ["staticlib", "rlib"]

[dependencies]
core = { version = "1.0.0", optional = true, package = 'rustc-std-workspace-core' }
compiler_builtins = { version = "0.1.16", optional = true }

[features]
rustc-dep-of-std = ['core', 'compiler_builtins']
